--- a/DummyApp/src/main/AndroidManifest.xml
+++ b/DummyApp/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
 
         <activity
-            android:name=""
+            android:name=".main.MainView"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
