Declarando activity en el Manifest

--- a/DummyApp/src/main/AndroidManifest.xml
+++ b/DummyApp/src/main/AndroidManifest.xml
@@ -18,6 +18,16 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".detail.DetailView"
+            android:theme="@style/AppTheme.NoActionBar">
+            <!--
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="es.ulpgc.eite.clean.mvp.masterdetail.master.MasterView"/>
+            -->
+        </activity>
     </application>
 
 </manifest>
