--- a/DummyApp/src/main/AndroidManifest.xml
+++ b/DummyApp/src/main/AndroidManifest.xml
@@ -22,11 +22,19 @@
 
         <activity
             android:name=".main.MainView"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".filter.FilterView"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="@string/app_name">
         </activity>
 
         <activity
