--- a/DummyApp/src/main/AndroidManifest.xml
+++ b/DummyApp/src/main/AndroidManifest.xml
@@ -25,10 +25,7 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/app_name">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+
         </activity>
 
         <activity
@@ -40,6 +37,21 @@
         <activity
             android:name=".master.MasterView"
             android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".detail.DetailView"
+
+            android:parentActivityName=".master.MasterView"
+            android:theme="@style/AppTheme.NoActionBar">
+            <!--
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="es.ulpgc.eite.clean.mvp.masterdetail.master.MasterView"/>
+            -->
         </activity>
 
     </application>
